--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "recharts": "^2.6.2",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
